# chromeos-shuangpin-ime

./: .gitgnore  .gitignore  .gitmodules  README.md  option.js  package-lock.json  package.json  tsconfig.json  version.json  webpack.config.js  webpack.new.js  webpack.vscode.js  修改双拼解决方案.md
docs/: CNAME  index.md
libGooglePinyin/:  test.html   test.js   test.wasm  CMakeCache.txt  CMakeLists.txt  Makefile  a.out.wasm  cmake_install.cmake  debug.js  debug.wasm  decoder.cpp  decoder.html  decoder.js  decoder.wasm  decoder.worker.js  matrixsearch.cpp  ngram.cpp  userdict.cpp  userdict.h
libGooglePinyin/dictbuilder/: CMakeLists.txt  builder  pinyin_dictbuilder.cpp
libGooglePinyin/pre/: dict.js  filesystem.js
src/: background.ts  chrome-extension.ts  controller.ts  extension.ts  imeadapterforvscode.ts  manifest.json  option.ts  view.ts
src/api/: base.ts  decoder.ts  eventdispatcher.ts  imelifecycle.ts  runtime.ts  setglobalconfig.ts
src/asset/: option.html  options.html  popup.html  test.html
src/backgrounds/: background.ts  decoder.ts  ime.ts  onlinedecoder.ts  vscode.ts
src/c_decoder/: decoder.ts
src/components/: virtualKeyboard.ts
src/decoder/: candidate.ts  cdecoder.ts  consts.ts  database.ts  dataloader.ts  dataparser.ts  decoder.ts  doubleparser.ts  enums.ts  heap.ts  imedecoder.ts  imedecoderproxy.ts  mldecoder.ts  onlinecandidate.ts  onlinedecoder.ts  predictor.ts  response.ts  shuangpindecoder.ts  sourceSegments.ts  staticdata.ts  targetMap.ts  targetPositions.ts  targetProbs.ts  targetSegments.ts  tokendecoder.ts  userdecoder.ts  vscodedecoder.ts
src/entries/: ime-ui.ts  main.ts
src/manifests/: manifest_decoder.json  manifest_ime.json  manifest_v2.json  manifest_v3.json  vscode.json
src/model/: candidate.ts  chineseconfig.ts  common.ts  config.ts  configfactory.ts  customShuangpin.ts  customconfig.ts  doubleconfig.ts  enums.ts  imehandler.ts  model.old.ts  model.ts  pinyinconfig.ts  state.ts  (+8 more)
test/: test_promise.js
tools/: build.js  compress.js  old_platform_support.js
types/: data.d.ts  decoder.d.ts  global.d.ts  index.d.ts  mvvm.d.ts
(+27 files in other folders)
